# workerflow

./: .dockerignore  .gitignore  .gitlab-ci.yml  .vimspector.json  Dockerfile  LICENSE  MANIFEST.in  README.md  api.rest  black.sh  build-docker.sh  build-pyinstaller.sh  clean.sh  env-template  flake8.sh  init.sh  install.dev.sh  isort.cfg  isort.sh  main.py  mypy.sh  project.dic  pytest.ini  python  requirements.deploy.txt  requirements.develop.txt  requirements.freeze.txt  requirements.main.txt  requirements.test.txt  requirements.txt  setup.cfg  twine.sh  uninstall.sh  version
.github/workflows/: docker-deploy.yml  python-deploy.yml  python-test.yml
.run/: main.run.xml
.vim/: coc-settings.json
__PACKAGE_LOWER__/: __main__.py  arguments.py  entrypoint.py
__PACKAGE_LOWER__/apps/: __init__.py
__PACKAGE_LOWER__/logging/: logging.py
__PACKAGE_LOWER__/system/: environ.py
tester/: test_entrypoint.py
workerflow/logging/: logging.py
