[metadata]
name = __PROJECT_NAME__
description = __PROJECT_DESC__
version = attr: __PACKAGE_LOWER__.__version__
author = __USER_NAME__
author_email = __USER_EMAIL__
maintainer = __USER_NAME__
maintainer_email = __USER_EMAIL__
url = https://github.com/__GITHUB_ID__/__PROJECT_NAME__
project_urls =
    GitHub: issues = https://github.com/__GITHUB_ID__/__PROJECT_NAME__/issues
    GitHub: repo = https://github.com/__GITHUB_ID__/__PROJECT_NAME__
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
keywords =
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: __PYTHON_MAJOR__.__PYTHON_MINOR__
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
python_requires = >=__PYTHON_MAJOR__.__PYTHON_MINOR__
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    tester*

[options.exclude_package_data]
__PACKAGE_LOWER__.assets = .gitignore

[options.entry_points]
console_scripts =
    __PACKAGE_LOWER__ = __PACKAGE_LOWER__.entrypoint:main
